Users api and warehouseName optional param in userDto
